--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Homework #11</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -15,7 +14,7 @@
 
         <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images...">
         <button type="submit">Search</button>
-        
+
       </form>
 
       <span class="loader">Loading images, please wait</span>
